Added Random Plane Edges

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,14 @@
         <div id="mynetwork">
         </div>
         <div id="container2">
-            <h2 style="color: blue;" id="u"><%= user %></h2>
-            <h2 style="color:red" id="v"><%= vertex %></h2>
-            <h2 style="color:green" id="e"><%= edges %></h2>
+            <span id="temptext2" style="width: 100%; text-align: center; font-size: x-large">
+            </span>
+            <span id="temptext" style="width: 100%; text-align: center; font-size: x-large">
+                Red link represents bus travel time : <i class="fa fa-bus" aria-hidden="true" style="color: orange"></i><br>
+                Green link represents flight travel time : <i class="fa fa-plane" aria-hidden="true" style="color: green"></i><br>
+                Click on solve to get Solution !!
+            </span>
+           
         </div>
     </div>
 
@@ -37,6 +42,9 @@
         <button type="button" class="btn btn-danger" id="generate-graph">Get New Graph</button>
         <br><br>
         <button type="button" class="btn btn-success" id="solve">Solve</button>
+        <h5 style="color: blue;" id="u"><%= user %></h5>
+        <h5 style="color:red" id="v"><%= vertex %></h5>
+        <h5 style="color:green" id="e"><%= edges %></h5>
     </div>
 
     <div class="container">
