--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,9 +42,10 @@
         <button type="button" class="btn btn-danger" id="generate-graph">Get New Graph</button>
         <br><br>
         <button type="button" class="btn btn-success" id="solve">Solve</button>
-        <h5 style="color: blue;" id="u"><%= user %></h5>
-        <h5 style="color:red" id="v"><%= vertex %></h5>
-        <h5 style="color:green" id="e"><%= edges %></h5>
+        <h5 style="color: blue; display: none;" id="u"><%= user %></h5>
+        <h5 style="color:red;display: none;" id="v"><%= vertex %></h5>
+        <h5 style="color:orange;display: none;" id="e"><%= edges %></h5>
+        <h5 style="color:orange;display: none;" id="pl"><%= planes %></h5>
     </div>
 
     <div class="container">
@@ -61,12 +62,16 @@
                 <form action='/' method="POST">
                     <div class="modal-body">
                         <div class="form-group">
-                        <label for="vertices">Add Cities:</label>
-                        <input type="textarea" class="form-control" id="vertices" name="vertex" placeholder="cities">
+                            <label for="vertices">Add Cities:</label>
+                            <input type="textarea" class="form-control" id="vertices" name="vertex" placeholder="cities">
                         </div>
                         <div class="form-group">
-                        <label for="edges">Add Edges[start,end,time]:</label>
-                        <input type="textarea" class="form-control" id="edges" name="edges" placeholder="Edges">
+                            <label for="edges">Add Bus Edges[start,end,time]:</label>
+                            <input type="textarea" class="form-control" id="edges" name="edges" placeholder="Bus Edges">
+                        </div>
+                        <div class="form-group">
+                            <label for="edges">Add Plane Edges[start,end,time]:</label>
+                            <input type="textarea" class="form-control" id="planes" name="planes" placeholder="Plane Edges">
                         </div>
                     </div>
                     <div class="modal-footer border-top-0 d-flex justify-content-center">
