Implemented Dijkstra on Random Graph picking only bus path

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,13 +24,7 @@
         <div id="mynetwork">
         </div>
         <div id="container2">
-            <span id="temptext2" style="width: 100%; text-align: center; font-size: x-large">
-            </span>
-            <span id="temptext" style="width: 100%; text-align: center; font-size: x-large">
-                Red link represents bus travel time : <i class="fa fa-bus" aria-hidden="true" style="color: orange"></i><br>
-                Green link represents flight travel time : <i class="fa fa-plane" aria-hidden="true" style="color: green"></i><br>
-                Click on solve to get Solution !!
-            </span>
+           
            
         </div>
     </div>
@@ -42,6 +36,13 @@
         <button type="button" class="btn btn-danger" id="generate-graph">Get New Graph</button>
         <br><br>
         <button type="button" class="btn btn-success" id="solve">Solve</button>
+        <span id="temptext2" style="width: 100%; text-align: center; font-size: x-large">
+        </span><br>
+        <span id="temptext" style="width: 100%; text-align: center; font-size: x-large">
+            Red link represents bus travel time : <i class="fa fa-bus" aria-hidden="true" style="color: orange"></i><br>
+            Green link represents flight travel time : <i class="fa fa-plane" aria-hidden="true" style="color: green"></i><br>
+            Click on solve to get Solution !!
+        </span>
         <h5 style="color: blue; display: none;" id="u"><%= user %></h5>
         <h5 style="color:red;display: none;" id="v"><%= vertex %></h5>
         <h5 style="color:orange;display: none;" id="e"><%= edges %></h5>
