Bus and Plane count added logo updated

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -31,6 +31,11 @@ body {
     margin: 0 auto;
 }
 
+#project{
+    font-family: 'Great Vibes', cursive;
+    font-size: 40px;
+}
+
 button{
     width: 150px;
 }
